<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="param">Parameter</string>
    <string name="choose_theme">Choose Theme</string>
         <string name="select">Select</string>
       <string name="visible">Visible</string>
    <string name="type_show">Type card:</string>
    <string name="only_data">Only Value</string>
 <string name="avaible">Avaible: </string>
      <string name="used">Used</string>
      <string name="free">Free</string>
    <string name="clic_show_data"> Click for showing data</string>
    <string name="Value">Value</string>
    <string name="status_On">Status On</string>
    <string name="status_Off">Status Off</string>
    <string name="click_to_turn_off">Click to turn off</string>
    <string name="click_to_turn_on">Click to turn on</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="disable_success">disable success!</string>
    <string name="Cancelled_desc_disable">nothing disable!</string>
    <string name="desc_disable_alarm_notify">You will not be able to recive new notification!</string>
    <string name="disable_alarm_notify">Do you want disable notify?</string>
    <string name="reset_success">reset success!</string>
    <string name="Send">Send!</string>
    <string name="Cancelled_desc_reset">nothing reset!</string>
    <string name="Cancelled">Cancelled!</string>
    <string name="Yes">Yes!</string>
    <string name="Ok">OK</string>
    <string name="No">No!</string>
    <string name="desc_reset_notify">You will be able to recive new notification!</string>
    <string name="reset_notify">Do you want reset notify?</string>
    <string name="connection_error">Connection Error</string>
    <string name="invalid_host_address">Invalid Host Address</string>
    <string name="Connecting">Connecting</string>
    <string name="edit_button">EDIT</string>
    <string name="use_percent">show in percent</string>
    <string name="Pie">Pie</string>
    <string name="Input">Sensor</string>
    <string name="Limit">Limit</string>
    <string name="Default">Default</string>
    <string name="Gauge">Gauge</string>
    <string name="Measure_unit">Measure Unit</string>
    <string name="use_pie">Use pie chart view</string>
    <string name="use_button">Use button view</string>
    <string name="use_default">Use default view</string>
    <string name="Button">Button</string>
    <string name="defaultPort">8080</string>
    <string name="easy_use">Easy way to manage</string>
    <string name="simple_dev_con">Simple device connect</string>
    <string name="Connect_Now">Connect Now</string>
    <string name="Option">Option</string>
    <string name="Host">Host</string>
    <string name="layout_order_0">Show for device</string>
    <string name="enable_notification"> Enable notification service</string>
    <string name="only_connected"> Show only connected devices</string>
    <string name="Url_address">Url address</string>
    <string name="description">description</string>
    <string name="app_name">AndBrutus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Alarm">Alarm</string>
    <string name="Log">Log</string>
    <string name="Ip_Camera">Ip Cam</string>
    <string name="Min_Alarm">Min Alarm</string>
    <string name="Max_Alarm">Max Alarm</string>
    <string name="Min_Value">Min Value</string>
    <string name="Max_Value">Max Value</string>
    <string name="Repeat_Alarm">Repeat Alarm Notify</string>
    <string name="status_contentDescription">status alarm</string>
    <string name="alarm_contentDescription">alarm_list</string>
    <string name="log_contentDescription">log_graph</string>
    <string name="camera_contentDescription">camera_view</string>
    <string name="percentual_contentDescription">percentual_data</string>
    <string name="settings_contentDescription">settings</string>
    <string name="visibility_contentDescription">visibility</string>
    <string name="read_write_contentDescription">read_write</string>
    <string name="alarm_enable_contentDescription">alarm_enable</string>
    <string name="erase_list_contentDescription">erase_list</string>

</resources>