<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:animateLayoutChanges="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="4dp"
    card_view:cardPreventCornerOverlap="false" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="left"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/Default"
            android:textColor="@color/grey_900"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/typeParam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texts"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/use_default"
            android:textColor="@color/grey_700"
            android:textSize="14sp" />

        <View
            android:id="@+id/arrow"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/typeParam"
            android:background="@color/grey_500" />

        <EditText
            android:id="@+id/measureUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typeParam"
            android:layout_margin="8dp"
            android:hint="@string/Measure_unit"
            android:textColor="@color/grey_700"
            android:textColorHighlight="@color/grey_100"
            android:textColorHint="@color/grey_500"
            android:textSize="14sp" />

        <View
            android:id="@+id/arrow1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/measureUnit"
            android:background="@color/grey_500" />

        <TextView
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrow1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/select"
            android:textColor="@color/grey_700"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/setdefaults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/arrow1"
            android:paddingBottom="8dp"
            android:paddingTop="20dp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>